-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 26
-
Component/s: hotspot
-
b24
compiler/c2/TestShiftRightAndAccumulate.java#id0 and a few other tests are failing intermittently in tier1 and higher tiers, seems to be x64 only.
Stack: [0x000070000c1f9000,0x000070000c2f9000], sp=0x000070000c2f5d40, free space=1011k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.dylib+0x4d8940] frame::frame(long*, long*, long*, unsigned char*)+0x40
V [libjvm.dylib+0x8505f0] frame::patch_pc(Thread*, unsigned char*)+0x1d0
V [libjvm.dylib+0x84584b] frame::deoptimize(JavaThread*)+0xbb
V [libjvm.dylib+0x744726] Deoptimization::deoptimize_single_frame(JavaThread*, frame, Deoptimization::DeoptReason)+0x236
V [libjvm.dylib+0x744a83] Deoptimization::deoptimize(JavaThread*, frame, Deoptimization::DeoptReason)+0xd3
V [libjvm.dylib+0xaa0b2d] JavaThread::deoptimize_marked_methods()+0x14d
V [libjvm.dylib+0x9b79a8] HandshakeOperation::do_handshake(JavaThread*)+0x48
V [libjvm.dylib+0x9b83c0] HandshakeState::try_process(HandshakeOperation*)+0x1c0
V [libjvm.dylib+0x9ba273] VM_HandshakeAllThreads::doit()+0x233
V [libjvm.dylib+0x13fd172] VM_Operation::evaluate()+0x142
V [libjvm.dylib+0x1413a6b] VMThread::evaluate_operation(VM_Operation*)+0x16b
V [libjvm.dylib+0x141457b] VMThread::inner_execute(VM_Operation*)+0x23b
V [libjvm.dylib+0x14136f8] VMThread::loop()+0x68
V [libjvm.dylib+0x14134d0] VMThread::run()+0xc0
V [libjvm.dylib+0x13348fc] Thread::call_run()+0xbc
V [libjvm.dylib+0x1046fe7] thread_native_entry(Thread*)+0x137
C [libsystem_pthread.dylib+0x611f] _pthread_start+0x63
C [libsystem_pthread.dylib+0x1ac3] thread_start+0xf
siginfo: si_signo: 10 (SIGBUS), si_code: 2 (BUS_ADRERR), si_addr: 0x000000011915e000
Stack: [0x000000c1f8d00000,0x000000c1f8e00000], sp=0x000000c1f8dfa2a0, free space=1000k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [jvm.dll+0x623009] CodeCache::find_blob_and_oopmap+0x19 (codeCache.inline.hpp:38)
V [jvm.dll+0x61ce6b] frame::frame+0x5b (frame_x86.inline.hpp:180)
V [jvm.dll+0x7597fd] frame::patch_pc+0x16d (frame_x86.cpp:302)
V [jvm.dll+0x750cc5] frame::deoptimize+0xe5 (frame.cpp:365)
V [jvm.dll+0x65ffb4] Deoptimization::deoptimize_single_frame+0x204 (deoptimization.cpp:1802)
V [jvm.dll+0x65ef2a] Deoptimization::deoptimize+0xaa (deoptimization.cpp:1814)
V [jvm.dll+0x92631d] JavaThread::deoptimize+0x34d (javaThread.cpp:1266)
V [jvm.dll+0x11106ac] VM_DeoptimizeAll::doit+0x8c (vmOperations.cpp:136)
V [jvm.dll+0x1111517] VM_Operation::evaluate+0xd7 (vmOperations.cpp:75)
V [jvm.dll+0x11132b3] VMThread::evaluate_operation+0xe3 (vmThread.cpp:285)
V [jvm.dll+0x11139c1] VMThread::inner_execute+0x241 (vmThread.cpp:424)
V [jvm.dll+0x1113fc4] VMThread::run+0x114 (vmThread.cpp:177)
V [jvm.dll+0x106289e] Thread::call_run+0x1be (thread.cpp:247)
V [jvm.dll+0xe079c4] thread_native_entry+0xc4 (os_windows.cpp:555)
C [ucrtbase.dll+0x26b4c] (no source info available)
C [KERNEL32.DLL+0x14cb0] (no source info available)
C [ntdll.dll+0x7edcb] (no source info available)
Stack: [0x0000003c32e00000,0x0000003c32f00000], sp=0x0000003c32ef9200, free space=996k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [jvm.dll+0x622f79] CodeCache::find_blob_and_oopmap+0x19 (codeCache.inline.hpp:38)
V [jvm.dll+0x61cddb] frame::frame+0x5b (frame_x86.inline.hpp:180)
V [jvm.dll+0x75969d] frame::patch_pc+0x16d (frame_x86.cpp:302)
V [jvm.dll+0x750b65] frame::deoptimize+0xe5 (frame.cpp:365)
V [jvm.dll+0x65ff24] Deoptimization::deoptimize_single_frame+0x204 (deoptimization.cpp:1801)
V [jvm.dll+0x65ee9a] Deoptimization::deoptimize+0xaa (deoptimization.cpp:1813)
V [jvm.dll+0x65f5b9] Deoptimization::deoptimize_frame_internal+0x1e9 (deoptimization.cpp:1882)
V [jvm.dll+0x4851f2] Runtime1::counter_overflow+0x202 (c1_Runtime1.cpp:521)
Stack: [0x000070000c1f9000,0x000070000c2f9000], sp=0x000070000c2f5d40, free space=1011k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.dylib+0x4d8940] frame::frame(long*, long*, long*, unsigned char*)+0x40
V [libjvm.dylib+0x8505f0] frame::patch_pc(Thread*, unsigned char*)+0x1d0
V [libjvm.dylib+0x84584b] frame::deoptimize(JavaThread*)+0xbb
V [libjvm.dylib+0x744726] Deoptimization::deoptimize_single_frame(JavaThread*, frame, Deoptimization::DeoptReason)+0x236
V [libjvm.dylib+0x744a83] Deoptimization::deoptimize(JavaThread*, frame, Deoptimization::DeoptReason)+0xd3
V [libjvm.dylib+0xaa0b2d] JavaThread::deoptimize_marked_methods()+0x14d
V [libjvm.dylib+0x9b79a8] HandshakeOperation::do_handshake(JavaThread*)+0x48
V [libjvm.dylib+0x9b83c0] HandshakeState::try_process(HandshakeOperation*)+0x1c0
V [libjvm.dylib+0x9ba273] VM_HandshakeAllThreads::doit()+0x233
V [libjvm.dylib+0x13fd172] VM_Operation::evaluate()+0x142
V [libjvm.dylib+0x1413a6b] VMThread::evaluate_operation(VM_Operation*)+0x16b
V [libjvm.dylib+0x141457b] VMThread::inner_execute(VM_Operation*)+0x23b
V [libjvm.dylib+0x14136f8] VMThread::loop()+0x68
V [libjvm.dylib+0x14134d0] VMThread::run()+0xc0
V [libjvm.dylib+0x13348fc] Thread::call_run()+0xbc
V [libjvm.dylib+0x1046fe7] thread_native_entry(Thread*)+0x137
C [libsystem_pthread.dylib+0x611f] _pthread_start+0x63
C [libsystem_pthread.dylib+0x1ac3] thread_start+0xf
siginfo: si_signo: 10 (SIGBUS), si_code: 2 (BUS_ADRERR), si_addr: 0x000000011915e000
Stack: [0x000000c1f8d00000,0x000000c1f8e00000], sp=0x000000c1f8dfa2a0, free space=1000k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [jvm.dll+0x623009] CodeCache::find_blob_and_oopmap+0x19 (codeCache.inline.hpp:38)
V [jvm.dll+0x61ce6b] frame::frame+0x5b (frame_x86.inline.hpp:180)
V [jvm.dll+0x7597fd] frame::patch_pc+0x16d (frame_x86.cpp:302)
V [jvm.dll+0x750cc5] frame::deoptimize+0xe5 (frame.cpp:365)
V [jvm.dll+0x65ffb4] Deoptimization::deoptimize_single_frame+0x204 (deoptimization.cpp:1802)
V [jvm.dll+0x65ef2a] Deoptimization::deoptimize+0xaa (deoptimization.cpp:1814)
V [jvm.dll+0x92631d] JavaThread::deoptimize+0x34d (javaThread.cpp:1266)
V [jvm.dll+0x11106ac] VM_DeoptimizeAll::doit+0x8c (vmOperations.cpp:136)
V [jvm.dll+0x1111517] VM_Operation::evaluate+0xd7 (vmOperations.cpp:75)
V [jvm.dll+0x11132b3] VMThread::evaluate_operation+0xe3 (vmThread.cpp:285)
V [jvm.dll+0x11139c1] VMThread::inner_execute+0x241 (vmThread.cpp:424)
V [jvm.dll+0x1113fc4] VMThread::run+0x114 (vmThread.cpp:177)
V [jvm.dll+0x106289e] Thread::call_run+0x1be (thread.cpp:247)
V [jvm.dll+0xe079c4] thread_native_entry+0xc4 (os_windows.cpp:555)
C [ucrtbase.dll+0x26b4c] (no source info available)
C [KERNEL32.DLL+0x14cb0] (no source info available)
C [ntdll.dll+0x7edcb] (no source info available)
Stack: [0x0000003c32e00000,0x0000003c32f00000], sp=0x0000003c32ef9200, free space=996k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [jvm.dll+0x622f79] CodeCache::find_blob_and_oopmap+0x19 (codeCache.inline.hpp:38)
V [jvm.dll+0x61cddb] frame::frame+0x5b (frame_x86.inline.hpp:180)
V [jvm.dll+0x75969d] frame::patch_pc+0x16d (frame_x86.cpp:302)
V [jvm.dll+0x750b65] frame::deoptimize+0xe5 (frame.cpp:365)
V [jvm.dll+0x65ff24] Deoptimization::deoptimize_single_frame+0x204 (deoptimization.cpp:1801)
V [jvm.dll+0x65ee9a] Deoptimization::deoptimize+0xaa (deoptimization.cpp:1813)
V [jvm.dll+0x65f5b9] Deoptimization::deoptimize_frame_internal+0x1e9 (deoptimization.cpp:1882)
V [jvm.dll+0x4851f2] Runtime1::counter_overflow+0x202 (c1_Runtime1.cpp:521)
- caused by
-
JDK-8365047 Remove exception handler stub code in C2
-
- Closed
-
- duplicates
-
JDK-8371747 Test SortingNearlySortedPrimitive sporadically failed at frame::sender(RegisterMap*)
-
- Closed
-
-
JDK-8372723 [lworld] compiler/c2/TestVerifyGraphEdges.java crashes with SIGSEGV
-
- Closed
-
-
JDK-8373195 [lworld] ValueObjectMethodsTest fails with -XX:+UseFieldFlattening
-
- Closed
-
- links to
-
Commit(master)
openjdk/jdk/48bbc950
-
Review(master)
openjdk/jdk/28187
(1 links to)