8371388: [BACKOUT] JDK-8365047: Remove exception handler stub code in C2

Reviewed-by: chagedorn, epeter