src/hotspot/cpu/ppc/c1_LIRAssembler_ppc.cpp
@@ -264,17 +264,12 @@ int LIR_Assembler::emit_deopt_handler() {
   }
 
   int offset = code_offset();
-  Label start;
-
-  __ bind(start);
   __ bl64_patchable(SharedRuntime::deopt_blob()->unpack(), relocInfo::runtime_call_type);
-  int entry_offset = __ offset();
-  __ b(start);
 
   guarantee(code_offset() - offset <= deopt_handler_size(), "overflow");
   __ end_a_stub();
 
-  return entry_offset;
+  return offset;
 }
 
 
