src/hotspot/cpu/s390/c1_LIRAssembler_s390.cpp
@@ -272,25 +272,14 @@ int LIR_Assembler::emit_deopt_handler() {
     // Not enough space left for the handler.
     bailout("deopt handler overflow");
     return -1;
-  }
-
-  int offset = code_offset();
-
-  Label start;
-  __ bind(start);
-
+  }  int offset = code_offset();
   // Size must be constant (see HandlerImpl::emit_deopt_handler).
   __ load_const(Z_R1_scratch, SharedRuntime::deopt_blob()->unpack());
   __ call(Z_R1_scratch);
-
-  int entry_offset = __ offset();
-
-  __ z_bru(start);
-
   guarantee(code_offset() - offset <= deopt_handler_size(), "overflow");
   __ end_a_stub();
 
-  return entry_offset;
+  return offset;
 }
 
 void LIR_Assembler::jobject2reg(jobject o, Register reg) {
